Fix M icon alignment

--- a/style.css
+++ b/style.css
@@ -518,7 +518,7 @@ footer {
 
 .m {
   position: relative;
-  top: 6px;
+  top: 3px;
   width: 30px;
   height: 30px;
   background: url('./images/icons/M-icon.svg') no-repeat;
@@ -528,7 +528,6 @@ footer {
   width: 30px;
   height: 30px;
   background: url('./images/icons/pnl-icon.svg') no-repeat;
-  background-size: contain;
 }
 
 /*************** Key Frames ******************/
@@ -666,8 +665,7 @@ footer {
     position: relative;
     grid-area: 2 / 2 / 3 / 3;
     width: 35.5vw;
-    background:
-      url('./images/deco/desktop/image-geometry_work-center.svg')
+    background: url('./images/deco/desktop/image-geometry_work-center.svg')
       no-repeat;
     background-size: contain;
     top: 1.5%;
@@ -685,8 +683,7 @@ footer {
     position: relative;
     grid-area: 4 / 1 / 5 / 2;
     top: -1.7%;
-    background:
-      url('/images/deco/desktop/image-geometry_work-left.svg')
+    background: url('/images/deco/desktop/image-geometry_work-left.svg')
       no-repeat;
     background-size: contain;
     width: 55.55%;
@@ -714,8 +711,7 @@ footer {
   .right-shape {
     position: relative;
     grid-area: 3 / 3 / 4 / 4;
-    background:
-      url('./images/deco/desktop/image-geometry_work-right.svg')
+    background: url('./images/deco/desktop/image-geometry_work-right.svg')
       no-repeat;
     background-size: contain;
     top: 41.4%;
